<resources>
    <string name="app_name">TugasAndroid2</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="garis">/</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="x">x</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="min">-</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="plus">+</string>
    <string name="nol">0</string>
    <string name="equal">=</string>
</resources>